fixed alignment on <small> text

--- a/main.css
+++ b/main.css
@@ -63,9 +63,19 @@ main {
   margin-bottom: 3rem;
 }
 
+.quote-container > div {
+  display: flex;
+  flex-direction: column;
+}
+
 .quote-face {
   width: 50px;
   flex-shrink: 0;
+}
+
+.quote-container small {
+  text-align: left;
+  margin-left: 5%;
 }
 
 .quote-text {
